--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/autopecas-Topicos
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql = true
+
+# CORS
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:4200
+# quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,PUT,POST,PATCH,DELETE
+quarkus.http.cors.exposed-headers=Content-Disposition
+quarkus.http.cors.access-control-max-age=24H
+quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.cors.headers=Authorization,Content-Type
